fix: Make accordions more visible

--- a/website/web/static/generic.css
+++ b/website/web/static/generic.css
@@ -118,3 +118,8 @@ table td p {
     font-weight: bold;
     color:#fff;
 }
+
+/* Make it more clear that an acordion is clickable */
+.accordion-button.collapsed {
+  background: var(--bs-info-bg-subtle);
+}
